--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,5 @@
-body {
-    background-color: #FFCC00;
-    padding: 20px;
+html, body {
+    background-color: #FEFEFE;
     margin: 0;
 }
 h1, h2, p, ul, li {
@@ -23,16 +22,26 @@ ul.header li a {
     display: inline-block;
 }
 .content {
-    background-color: #FFF;
-    padding: 20px;
+    width: 80%;
+    margin: 20px auto 0;
 }
-.content h2 {
-    padding: 0;
-    margin: 0;
-}
-.content li {
-    margin-bottom: 10px;
-}
+
 .active {
     background-color: #0099FF;
+}
+
+.login {
+    width: 300px;
+    margin: 0 auto;
+}
+
+.login .submit {
+    width: 100%;
+}
+
+.login .error {
+    width: 100%;
+    color: red;
+    height: 14px;
+    font-size: 14px;
 }
